--- a/drp-web/src/main/webapp/WEB-INF/web.xml
+++ b/drp-web/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,73 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+                      http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
+    <display-name>Archetype Created Web Application</display-name>
+
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>com.yootk.common.filter.EncodingFilter</filter-class>
+        <init-param>
+            <param-name>charset</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <servlet>
+        <servlet-name>DispatcherServlet</servlet-name>
+        <servlet-class>com.yootk.common.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>scanPackages</param-name>
+            <param-value>com.yootk.mall</param-value> <!-- 如果有多个包使用“;”分割 -->
+        </init-param>
+        <init-param>
+            <param-name>validationBaseName</param-name>
+            <param-value>com.yootk.mall.action.validate.Validation</param-value>
+        </init-param>
+        <init-param>
+            <param-name>errorPageBaseName</param-name>
+            <param-value>com.yootk.mall.action.validate.ErrorPage</param-value>
+        </init-param>
+        <init-param>
+            <param-name>messageBaseName</param-name>
+            <param-value>com.yootk.mall.action.resource.Message</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet>
+        <servlet-name>RandomCode</servlet-name>
+        <servlet-class>com.yootk.common.servlet.web.RandomCode</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RandomCode</servlet-name>
+        <url-pattern>/ImageCode</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DispatcherServlet</servlet-name>
+        <url-pattern>*.action</url-pattern>
+    </servlet-mapping>
+    <filter>
+        <filter-name>MemberFrontLoginFilter</filter-name>
+        <filter-class>com.yootk.drp.filter.MemberFrontLoginFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>MemberCookieFilter</filter-name>
+        <filter-class>com.yootk.drp.filter.MemberCookieFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>MemberCookieFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>MemberFrontLoginFilter</filter-name>
+        <url-pattern>/pages/front/center/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
