--- a/drp-web/src/main/resources/com/yootk/drp/action/resource/Message.properties
+++ b/drp-web/src/main/resources/com/yootk/drp/action/resource/Message.properties
@@ -23,3 +23,4 @@ vo.delete.failure={0}\u6570\u636E\u5220\u9664\u5931\u8D25\uFF01
 login.success=\u767B\u5F55\u6210\u529F\uFF0C\u6B22\u8FCE\u8BBF\u95EE\uFF01
 login.failure=\u767B\u5F55\u5931\u8D25\uFF0C\u9519\u8BEF\u7684\u7528\u6237\u540D\u6216\u8005\u5BC6\u7801\uFF01
 logout.success=\u6210\u529F\u6CE8\u9500\uFF0C\u4E0B\u6B21\u518D\u89C1\uFF01
+logout.already=\u60A8\u8FD8\u672A\u767B\u5F55\uFF01
