--- a/drp-web/src/main/webapp/WEB-INF/web.xml
+++ b/drp-web/src/main/webapp/WEB-INF/web.xml
@@ -69,5 +69,7 @@
         <filter-name>MemberFrontLoginFilter</filter-name>
         <url-pattern>/pages/front/center/*</url-pattern>
     </filter-mapping>
-
+    <error-page>
+        <location>/pages/plugins/error.jsp</location>
+    </error-page>
 </web-app>
