进行了地址的修改

--- a/drp-web/src/main/resources/com/yootk/drp/action/resource/Page.properties
+++ b/drp-web/src/main/resources/com/yootk/drp/action/resource/Page.properties
@@ -29,8 +29,17 @@ com.yootk.drp.action.back.GoodsActionBack.add.page=/pages/back/goods/goods_add.j
 com.yootk.drp.action.front.AddressActionFront.add.action=/pages/front/center/address/address_add_pre.action
 com.yootk.drp.action.front.AddressActionFront.add.page=/pages/front/center/address/address_add.jsp
 
+com.yootk.drp.action.front.AddressActionFront.list.page=/pages/front/center/address/address_list.jsp
+com.yootk.drp.action.front.AddressActionFront.list.action=/pages/front/center/address/address_list.action
+
+
+
 com.yootk.drp.action.front.MemberActionFront.regist.action=/regist_pre.action
 com.yootk.drp.action.front.MemberActionFront.regist.page=/regist.jsp
 
 com.yootk.drp.action.front.MemberAactionFront.edit.action=/pages/front/center/member/member_password_edit_pre
 com.yootk.drp.action.front.MemberAactionFront.edit.page=/pages/front/center/member/member_password_edit.jsp
+
+com.yootk.drp.action.front.MemberAactionFront.edit_message.action=/pages/front/center/member/member_message_edit_pre
+com.yootk.drp.action.front.MemberAactionFront.edit_message.page=/pages/front/center/member/member_edit.jsp
+
