--- a/drp-web/src/main/resources/com/yootk/drp/action/resource/Page.properties
+++ b/drp-web/src/main/resources/com/yootk/drp/action/resource/Page.properties
@@ -25,3 +25,10 @@ com.yootk.drp.EmpAction.list.action=/pages/back/admin/emp/emp_list.action
 
 com.yootk.drp.action.back.GoodsActionBack.add.action=/pages/back/goods/goods_add_pre.action
 com.yootk.drp.action.back.GoodsActionBack.add.page=/pages/back/goods/goods_add.jsp
+
+com.yootk.drp.action.back.WarehouseBackAction.edit.action=/pages/back/admin/warehouse/warehouse_edit.action
+com.yootk.drp.action.back.WarehouseBackAction.list.page=/pages/back/admin/warehouse/warehouse_add.jsp
+com.yootk.drp.action.back.WarehouseBackAction.houseList.page=/pages/back/admin/warehouse/warehouse_list.jsp
+com.yootk.drp.action.back.WarehouseBackAction.houseList.action=/pages/back/admin/warehouse/house_list.action
+com.yootk.drp.action.back.WarehouseBackAction.houseEdit.page=/pages/back/admin/warehouse/warehouse_edit.jsp
+com.yootk.drp.action.back.WarehouseBackAction.houseAdd.page=/pages/back/admin/warehouse/warehouse_add.jsp
