--- a/drp-web/src/main/resources/com/yootk/drp/action/resource/Page.properties
+++ b/drp-web/src/main/resources/com/yootk/drp/action/resource/Page.properties
@@ -32,3 +32,13 @@ com.yootk.drp.action.back.WarehouseBackAction.houseList.page=/pages/back/admin/w
 com.yootk.drp.action.back.WarehouseBackAction.houseList.action=/pages/back/admin/warehouse/house_list.action
 com.yootk.drp.action.back.WarehouseBackAction.houseEdit.page=/pages/back/admin/warehouse/warehouse_edit.jsp
 com.yootk.drp.action.back.WarehouseBackAction.houseAdd.page=/pages/back/admin/warehouse/warehouse_add.jsp
+
+com.yootk.drp.action.back.MemberActionBack.addPre.action=/pages/back/admin/emp/emp_add_pre.action
+com.yootk.drp.action.back.MemberActionBack.add.page=/pages/back/admin/emp/emp_add.jsp
+
+com.yootk.drp.action.back.MemberActionBack.list.action=/pages/back/admin/emp/emp_list.action
+com.yootk.drp.action.back.MemberActionBack.list.page=/pages/back/admin/emp/emp_list.jsp
+
+com.yootk.drp.action.back.MemberActionBack.editPre.action=/pages/back/admin/emp/emp_edit_pre.action
+com.yootk.drp.action.back.MemberActionBack.edit.page=/pages/back/admin/emp/emp_edit.jsp
+
